force-app/main/default/objects/Case/fields/DisputeAmount__c.field-meta.xml
<CustomField>
    <fullName>DisputeAmount__c</fullName>
    <description>Amount being disputed by customer</description>
    <inlineHelpText>Enter the disputed transaction amount in INR</inlineHelpText>
    <label>Dispute Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>