force-app/main/default/objects/Case/fields/DisputeStage__c.field-meta.xml
<CustomField>
    <fullName>DisputeStage__c</fullName>
    <description>Current stage of dispute resolution</description>
    <inlineHelpText>Select the current stage of the dispute investigation</inlineHelpText>
    <label>Dispute Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Filed</fullName>
                <default>true</default>
                <label>Filed</label>
            </value>
            <value>
                <fullName>Evidence Review</fullName>
            </value>
            <value>
                <fullName>Bank Decision</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>