force-app/main/default/objects/Case/fields/InvestigationDays__c.field-meta.xml
<CustomField>
    <fullName>InvestigationDays__c</fullName>
    <description>Number of days since dispute filed</description>
    <inlineHelpText>Days elapsed since dispute was filed</inlineHelpText>
    <label>Investigation Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>