force-app/main/default/objects/Case/fields/ProvisionalCreditAmount__c.field-meta.xml
<CustomField>
    <fullName>ProvisionalCreditAmount__c</fullName>
    <description>Amount of provisional credit issued</description>
    <inlineHelpText>Enter provisional credit amount issued in INR</inlineHelpText>
    <label>Provisional Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>