force-app/main/default/objects/Case/fields/ProvisionalCreditIssued__c.field-meta.xml
<CustomField>
    <fullName>ProvisionalCreditIssued__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if provisional credit issued</description>
    <inlineHelpText>Check if provisional credit has been issued to customer</inlineHelpText>
    <label>Provisional Credit Issued</label>
    <type>Checkbox</type>
</CustomField>